--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
                             </p>
                         </div>
                     </div>
+                    
+                    <!-- Hyper Ultimate -->
+                    <div class="tower-guide-item">
+                        <div class="tower-guide-icon hyperUltimate-icon"></div>
+                        <div class="tower-guide-info">
+                            <h3>Hyper Ultimate</h3>
+                            <p class="tower-cost-info">Cost: 1200</p>
+                            <p>Hyper-powerful tower with extremely fast blue laser projectiles and massive damage. The ultimate game-changer for any defense strategy.</p>
+                            <p class="tower-upgrades">
+                                <strong>Level 1:</strong> High damage blue laser beam with critical hit chance<br>
+                                <strong>Level 2:</strong> Enhanced damage plus chain lightning effect<br>
+                                <strong>Level 3:</strong> Devastating damage with improved chain lightning and area damage
+                            </p>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="tower-guide-tips">
@@ -193,6 +208,7 @@
                                 <li><kbd>5</kbd> - Select Freezer</li>
                                 <li><kbd>6</kbd> - Select Pulsar</li>
                                 <li><kbd>7</kbd> - Select Devastator</li>
+                                <li><kbd>8</kbd> - Select Hyper Ultimate</li>
                             </ul>
                         </div>
                         <div class="shortcuts-column">
@@ -406,6 +422,12 @@
                             <div class="tower-icon devastator-icon"></div>
                             <div class="tower-name">Devastator</div>
                             <div class="tower-cost">600</div>
+                        </button>
+                        <button class="tower-button" data-type="hyperUltimate" data-cost="1200">
+                            <div class="tower-hotkey">8</div>
+                            <div class="tower-icon hyperUltimate-icon"></div>
+                            <div class="tower-name">Hyper Ultimate</div>
+                            <div class="tower-cost">1200</div>
                         </button>
                     </div>
                 </div>
