--- a/index.html
+++ b/index.html
@@ -309,6 +309,21 @@
                         <input type="range" id="floating-text-intensity-slider" min="0" max="100" value="100" class="intensity-slider">
                         <p class="setting-description">Adjust the size of floating text indicators in the game</p>
                     </div>
+                    <div class="setting-item">
+                        <label for="floating-text-effects">Floating Text Effects: <span id="floating-text-effects-value">100%</span></label>
+                        <input type="range" id="floating-text-effects-slider" min="0" max="100" value="100" class="intensity-slider">
+                        <p class="setting-description">Adjust the visual effects of floating texts (glow, shadows, pulse)</p>
+                    </div>
+                    <div class="setting-item">
+                        <label for="floating-text-duration">Floating Text Duration: <span id="floating-text-duration-value">100%</span></label>
+                        <input type="range" id="floating-text-duration-slider" min="50" max="200" value="100" class="intensity-slider">
+                        <p class="setting-description">Adjust how long floating texts remain on screen (lower values improve performance)</p>
+                    </div>
+                    <div class="setting-item">
+                        <label for="projectile-quality">Projectile Quality: <span id="projectile-quality-value">100%</span></label>
+                        <input type="range" id="projectile-quality-slider" min="0" max="100" value="100" class="intensity-slider">
+                        <p class="setting-description">Adjust the visual quality of projectiles (lower values improve performance when many projectiles are on screen)</p>
+                    </div>
                 </div>
             </div>
             <div class="modal-footer">
