--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
                 </div>
             </div>
             <div class="modal-footer">
+                <button id="return-to-menu-button" class="return-to-menu-button"><i class="fas fa-home"></i> Return to Menu</button>
                 <button class="close-settings-button">Close</button>
             </div>
         </div>
